[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/network_bootstrap/network_link.gd" type="Script" id=1]
[ext_resource path="res://addons/network_bootstrap/example/ServerPlane.gd" type="Script" id=2]
[ext_resource path="res://addons/network_bootstrap/example/Chara.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 244.536 ]
}

[node name="NetworkLink" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Chara" parent="." instance=ExtResource( 3 )]

[node name="Chara1" parent="." instance=ExtResource( 3 )]

[node name="Chara2" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="ModeLabel" type="Label" parent="."]
margin_left = 245.0
margin_top = 2.0
margin_right = 318.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
margin_left = 245.0
margin_top = 19.8025
margin_right = 320.0
margin_bottom = 33.8025
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pos_updated" from="Chara" to="." method="_on_Chara_pos_updated"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
